sessão sobre add

--- a/inde.html
+++ b/inde.html
@@ -28,16 +28,25 @@
         <div class="home">
             <button class="btn">acesse</button>
             <i class="fa-solid fa-angle-down"></i>
-
-        </div>
-        <div class="projetos">
-
-            <div class="box">
-              <div class="circulo">
-
-              </div>  
-            <img src="Unofficial_JavaScript_logo_2.svg.png" class="box-foto2" alt="">
+        </div> <!-- FIM HOME -->
+        <div class="sobre">
+            <div class="sobre-titulo">
+                <h2>Sobre</h2>
+                <div class="linha"></div>
             </div>
+            
+            <div class="sobre-content">
+                <div class="left">
+                    <img src="imgs/semfundo.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum numquam deserunt? Voluptates iure libero voluptatum provident et, voluptas, unde ullam quam necessitatibus, aperiam recusandae ut earum. Consectetur, adipisci dolores?</p>
+                </div>
+                <div class="right">
+                    <h2>Dev Junior</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat aspernatur rerum aut assumenda adipisci doloribus. Nostrum eum quibusdam exercitationem! Nesciunt laudantium cumque laboriosam inventore ex. Quis nulla molestiae dolorem!</p>
+                </div>
+            </div>
+        </div>
+
         </div>
     </main>
 
