--- a/inde.html
+++ b/inde.html
@@ -17,6 +17,7 @@
                   <ul class="nave-intens" type="none" >
                      <a href="#"><li>Home</li> </a>
                      <a href="#"><li>Sobre</li></a>
+                     <a href="#"><li>Habilidades</li></a>
                      <a href="#"><li>Projetos</li></a>
                      <a href="#"><li>Contato</li></a>
                   </ul>
@@ -45,8 +46,9 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat aspernatur rerum aut assumenda adipisci doloribus. Nostrum eum quibusdam exercitationem! Nesciunt laudantium cumque laboriosam inventore ex. Quis nulla molestiae dolorem!</p>
                 </div>
             </div>
-        </div>
-
+        </div> <!-- FIM SOBRE -->
+        <div class="contato">
+            
         </div>
     </main>
 
