--- a/inde.html
+++ b/inde.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/90dd3151ae.js" crossorigin="anonymous"></script>
     
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="menu-fixo">
           <div class="navegacao-container">
-              <img  class="navegacao-container-foto" src="images.jpeg.jpg" >
+              <img  class="navegacao-container-foto" src="imgs/images.jpeg.jpg" >
                   <ul class="nave-intens" type="none" >
                      <a href="#"><li>Home</li> </a>
                      <a href="#"><li>Sobre</li></a>
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="principal">
         <div class="home">
             <button class="btn">acesse</button>
             <i class="fa-solid fa-angle-down"></i>
