--- a/inde.html
+++ b/inde.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <header>
+    <header class="navegacao-principal">
         <div class="menu-fixo">
           <div class="navegacao-container">
               <img  class="navegacao-container-foto" src="imgs/images.jpeg.jpg" >
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <main class="principal">
+    <main>
         <div class="home">
             <button class="btn">acesse</button>
             <i class="fa-solid fa-angle-down"></i>
