terminou seção sobre e ajeitando bugs

--- a/inde.html
+++ b/inde.html
@@ -31,7 +31,8 @@
                 <button class="btn">acesse</button>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
-        </div> <!-- FIM HOME -->
+        </div> 
+        <!-- FIM HOME -->
         <div class="sobre">
             <div class="sobre-titulo">
                 <h2>Sobre</h2>
@@ -48,8 +49,37 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat aspernatur rerum aut assumenda adipisci doloribus. Nostrum eum quibusdam exercitationem! Nesciunt laudantium cumque laboriosam inventore ex. Quis nulla molestiae dolorem!</p>
                 </div>
             </div>
-        </div> <!-- FIM SOBRE -->
+        </div>
+         <!-- FIM SOBRE -->
+        <div class="projetos">
+                <div class="projetos-titulo">
+                    <h2>Projetos</h2>
+                    <div class="linha"></div>
+                </div>
+            <div class="projetos-container">
+            <div class="projetos-card projetos-img1">
+                <button class="projetos-card-btn">
+                    ver mais
+                </button>
+            </div>
+            <div class="projetos-card projetos-img2">
+                <button class="projetos-card-btn">
+                    ver mais
+                </button>
+            </div>
+            <div class="projetos-card projetos-img3">
+                <button class="projetos-card-btn">
+                    ver mais
+                </button>
+            </div>
+        </div>
+        </div>
+        <!-- FIM PROJETOS -->
         <div class="contato">
+            <div class="contato-titulo"> 
+                <h2>Contato</h2>
+                <div class="linha"></div>
+            </div>
             <div class="l-main">
             <article class="c-card c-card--index js-card">
                 <div class="c-card-content">
