nova secao habilidade e resolvendo bugs

--- a/inde.html
+++ b/inde.html
@@ -51,6 +51,93 @@
             </div>
         </div>
          <!-- FIM SOBRE -->
+        <!--Inicio habilidade-->
+        <div class="habilidades-sessao">
+            <div class="habilidades-titulo">
+                <h2>Habilidades</h2>
+                <div class="linha"></div>
+            </div>
+                <div class="conhecimentos">
+                        <div class="conhecimento">
+                            <div class="conhecimento-header">
+                                <i></i>
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="conhecimento-text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+                                Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+                                Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                                </p>
+                            </div>
+                        </div>
+                    <div class="conhecimento">
+                        <div class="conhecimento-header">
+                            <i></i>
+                            <h3>Css</h3>
+                        </div>
+                        <div class="conhecimento-text">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+                            Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+                            Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                            </p>
+                        </div>
+                    </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i></i>
+                        <h3>Desing</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+                        Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+                        Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                        </p>
+                    </div>
+                </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i></i>
+                    <h3>Java-script</h3>
+                </div>
+                <div class="conhecimento-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+                    Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+                    Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                    </p>
+                </div>
+            </div>
+        <div class="conhecimento">
+            <div class="conhecimento-header">
+                <i></i>
+                <h3>Boostrap</h3>
+            </div>
+            <div class="conhecimento-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+                Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+                Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                </p>
+            </div>
+        </div>
+    <div class="conhecimento">
+        <div class="conhecimento-header">
+            <i></i>
+            <h3>Git e Git Hub</h3>
+        </div>
+        <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
+            Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
+            Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+            </p>
+        </div>
+    </div>
+    <div class="conhecimentos-img">
+            <img src="imgs/web.webp">
+    </div>
+</div>
+            </div>
+
+        </div>
+
         <div class="projetos">
                 <div class="projetos-titulo">
                     <h2>Projetos</h2>
