--- a/inde.html
+++ b/inde.html
@@ -61,9 +61,7 @@
                             <h3>HTML</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-                                Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-                                Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
                             </p>
                         </div>
                     </div>
@@ -73,9 +71,7 @@
                             <h3>Css</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-                            Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-                            Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
                             </p>
                         </div>
                     </div>
@@ -85,9 +81,7 @@
                         <h3>Desing</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-                        Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-                        Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
                         </p>
                     </div>
                 </div>
@@ -97,9 +91,7 @@
                     <h3>Java-script</h3>
                 </div>
                 <div class="conhecimento-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-                    Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-                    Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
                     </p>
                 </div>
             </div>
@@ -109,9 +101,7 @@
                 <h3>Boostrap</h3>
             </div>
             <div class="conhecimento-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-                Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-                Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
                 </p>
             </div>
         </div>
@@ -121,15 +111,13 @@
             <h3>Git e Git Hub</h3>
         </div>
         <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae possimus, amet odio asperiores unde tempora ab ex, soluta consequuntur quia totam ullam assumenda dolorem nesciunt ea et impedit, quidem architecto.
-            Accusantium, sapiente. Omnis velit, error explicabo expedita nam molestiae possimus numquam minima, tenetur ad nostrum perferendis quisquam incidunt non sapiente sequi. Ad error sint quam ea molestiae optio amet earum.
-            Laboriosam repellat voluptatem ab! Ipsum mollitia illum, veritatis, dolor ut reprehenderit eius beatae minus a atque fuga laborum, inventore ipsa nisi tenetur consectetur quos numquam eligendi labore enim tempora laudantium.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
             </p>
         </div>
     </div>
-    <div class="conhecimentos-img">
+    <!-- <div class="conhecimentos-img">
             <img src="imgs/web.webp">
-    </div>
+    </div> -->
     </div>
             </div>
 
