Mudança no background da section Habilidade e add melhorias no código

--- a/inde.html
+++ b/inde.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="conhecimento">
                         <div class="conhecimento-header">
-                            <i></i>
+                            <i class="fab fa-css3-alt"></i>
                             <h3>Css</h3>
                         </div>
                         <div class="conhecimento-text">
@@ -77,7 +77,7 @@
                     </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i></i>
+                        <i class="fas fa-pencil-alt"></i>
                         <h3>Desing</h3>
                     </div>
                     <div class="conhecimento-text">
@@ -87,7 +87,7 @@
                 </div>
             <div class="conhecimento">
                 <div class="conhecimento-header">
-                    <i></i>
+                    <i class="fab fa-js"></i>
                     <h3>Java-script</h3>
                 </div>
                 <div class="conhecimento-text">
@@ -97,7 +97,7 @@
             </div>
         <div class="conhecimento">
             <div class="conhecimento-header">
-                <i></i>
+                <i class="fab fa-bootstrap"></i>
                 <h3>Boostrap</h3>
             </div>
             <div class="conhecimento-text">
@@ -115,9 +115,9 @@
             </p>
         </div>
     </div>
-    <!-- <div class="conhecimentos-img">
-            <img src="imgs/web.webp">
-    </div> -->
+    <div class="conhecimentos-img">
+            <img src="imgs/conhecimentos.png">
+    </div>
     </div>
             </div>
 
