--- a/inde.html
+++ b/inde.html
@@ -33,7 +33,7 @@
         </div> 
                                             <!------------------------------------------- FIM HOME ------------------------------------------->
         <div class="sobre">
-            <div class="sobre-titulo">
+            <div class="titulo">
                 <h2>Sobre</h2>
                 <div class="linha"></div>
             </div>
@@ -50,7 +50,7 @@
         </div>
          <!------------------------------------------- FIM SOBRE ------------------------------------------->
         <div class="habilidades-sessao">
-            <div class="habilidades-titulo">
+            <div class="titulo">
                 <h2>Habilidades</h2>
                 <div class="linha"></div>
             </div>
@@ -122,7 +122,7 @@
     </div>
       </div>
         <div class="projetos">
-                <div class="projetos-titulo">
+                <div class="titulo">
                     <h2>Projetos</h2>
                     <div class="linha"></div>
           </div>
@@ -146,7 +146,7 @@
         </div>
         <!------------------------------------------- FIM PROJETOS ------------------------------------------->
           <div class="contato">
-            <div class="contato-titulo"> 
+            <div class="titulo"> 
                 <h2>Contato</h2>
                 <div class="linha"></div>
             </div>
