--- a/inde.html
+++ b/inde.html
@@ -38,11 +38,13 @@
                 <div class="linha"></div>
             </div>
             <div class="sobre-content">
-                <div class="left">
+                <div class="sobre-card">
                     <img src="imgs/semfundo.png" alt="">
+                    <h2>Experiencias</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum numquam deserunt? Voluptates iure libero voluptatum provident et, voluptas, unde ullam quam necessitatibus, aperiam recusandae ut earum. Consectetur, adipisci dolores?</p>
                 </div>
-                <div class="right">
+                <div class="sobre-card">
+                    <img src="imgs/perfil_Israel.jpeg" alt="perfil_Israel" class="sobre-perfil">
                     <h2>Dev Junior</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat aspernatur rerum aut assumenda adipisci doloribus. Nostrum eum quibusdam exercitationem! Nesciunt laudantium cumque laboriosam inventore ex. Quis nulla molestiae dolorem!</p>
                 </div>
