Add mais elementos

--- a/inde.html
+++ b/inde.html
@@ -39,14 +39,17 @@
             </div>
             <div class="sobre-content">
                 <div class="sobre-card">
-                    <img src="imgs/semfundo.png" alt="">
+                    <img src="imgs/experiencias.jpg" alt="">
                     <h2>Experiencias</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatum numquam deserunt? Voluptates iure libero voluptatum provident et, voluptas, unde ullam quam necessitatibus, aperiam recusandae ut earum. Consectetur, adipisci dolores?</p>
+                    <p>Estudante na Universidade do Pará na instituição do Cesupa de Ciências da Computação.
+                        Com ensino basico de inglês e Mandarim.
+                        formado na Academia de visual da Gracom e trabalho com Artes 3D e 2D usando ZBrush e Blender,com edição de fotos e photophop.
+                    </p>
                 </div>
                 <div class="sobre-card">
                     <img src="imgs/perfil_Israel.jpeg" alt="perfil_Israel" class="sobre-perfil">
-                    <h2>Dev Junior</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat aspernatur rerum aut assumenda adipisci doloribus. Nostrum eum quibusdam exercitationem! Nesciunt laudantium cumque laboriosam inventore ex. Quis nulla molestiae dolorem!</p>
+                    <h2>Progamador: Font-end junior</h2>
+                    <p>Trabalho com sites e aplicativos tanto web como mobile.</p>
                 </div>
             </div>
         </div>
@@ -63,7 +66,7 @@
                             <h3>HTML</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
+                            <p>Conhecimentos gerais de HTML,organizações de divs,prompts de acesso, fazendo list para textos .
                             </p>
                         </div>
                     </div>
@@ -73,17 +76,17 @@
                             <h3>Css</h3>
                         </div>
                         <div class="conhecimento-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
+                            <p>Conhecimentos gerais de CSS como mudar cores,manipulação de textos, organição de texto,fontes de textos, tamanho de telas e imagens,animação de textos e imagens com keyframes.
                             </p>
                         </div>
                     </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <i class="fas fa-pencil-alt"></i>
-                        <h3>Desing</h3>
+                        <h3>Java</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
+                        <p>Conhecimentos gerais de JAVA. get e sett, manipulação de objeto, usando o metodo polimofismo.
                         </p>
                     </div>
                 </div>
@@ -93,7 +96,7 @@
                     <h3>Java-script</h3>
                 </div>
                 <div class="conhecimento-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?
+                    <p>Conhecimentos gerais de JAVA-SCRIPT,pegando o html para manipulação,organição em function, usando laços de repetição como for e while,usando codicionais como if e else e manipulação de Array e objeto.
                     </p>
                 </div>
             </div>
