--- a/Pag.html
+++ b/Pag.html
@@ -28,10 +28,12 @@
     <main>
         <div class="home">
             <div class="home-btn">
-                <p>Português: "Você consegue ver o quão infinito é?"</p>
-                <p>Mandarim: " 你能看出它是多麼無限嗎？" </p>
+
+                <p>Português: "Você consegue ver o quão infinito é?".</p>
+                <p>Mandarim: "你能看出它是多麼無限嗎？".</p>
                 <button class="btn">acesse</button>
                 <i class="fa-solid fa-angle-down"></i>
+                
             </div>
         </div> 
                                             <!------------------------------------------- FIM HOME ------------------------------------------->
@@ -43,14 +45,14 @@
             <div class="sobre-content">
                 <div class="sobre-card">
                     <img src="imgs/progamando.jpg" alt="Progamador">
-                    <h2>Experiencias</h2>
+                    <h2>Experiencias: </h2>
                     <p>Estudante na Universidade do Pará na instituição do Cesupa de Ciências da Computação.
                         Com ensino basico de inglês e Mandarim.
-                        formado na Academia de visual da Gracom e trabalho com Artes 3D e 2D usando ZBrush e Blender,com edição de fotos e photophop.
+                        formado na Academia de visual da Gracom e trabalho com Artes 3D e 2D usando ZBrush e Blender e com edição de fotos e videos.
                     </p>
                 </div>
                 <div class="sobre-card">
-                    <img src="imgs/perfil_Israel.jpeg" alt="perfil_Israel" class="sobre-perfil">
+                    <img src="imgs/Avatar.jpeg" alt="perfil_Israel" class="sobre-perfil">
                     <h2>Progamador: Font-end junior</h2>
                     <p>Trabalho com sites e aplicativos tanto web como mobile.</p>
                 </div>
@@ -280,7 +282,6 @@
       </div>
     </div>
   </main>
-    <footer>
-    </footer>
+            <!--------Fim da Sessão Contato -------------->
 </body>
 </html>
