--- a/Pag.html
+++ b/Pag.html
@@ -29,12 +29,12 @@
     <main>
         <div class="home" id="home">
             <div class="home-container">
+                <img src="imgs/Logo_Definitiva.jpg" alt="Samurai">
                 <p>Português: "Você consegue ver o quão infinito é?".</p>
                 <p>Mandarim: "你能看出它是多麼無限嗎？".</p>
             </div>
             <div class="home-btn">
                 <button class="btn">acesse</button>
-                <i class="fa-solid fa-angle-down"></i>
             </div>
         </div> 
                                             <!------------------------------------------- FIM HOME ------------------------------------------->
