--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,7 @@
                 </ul>
           </div>
         </div>
+        <!----------FIM DO HEADER------------->
     </header>
     <main>
         <div class="home" id="home">
