--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     <header class="navegacao-principal">
         <div class="menu-fixo">
           <div class="navegacao-container">
-              <img  class="navegacao-container-foto" src="imgs/I.jpg" >
+              <img  class="navegacao-container-foto" src="imgs/Logo Para MIM.png" >
                 <ul class="nave-intens nav" type="none" >
                     <a href="#home"><li>Home</li> </a>
                     <a href="#sobre"><li>Sobre</li></a>
