--- a/Index.html
+++ b/Index.html
@@ -184,9 +184,9 @@
                     Meu  <span class="c-card__title-emphasis">Instagram</span>
                   </h1>
    
-                  <p class="c-card__explanation">Instagram Profissional: </p>
+                  <p class="c-card__explanation">Instagram Profissional: israelpimaz12 </p>
    
-                  <a href="#" class="c-button">Ir para meu Instagram</a>
+                  <a href="https://www.instagram.com/israelpimaz12/" class="c-button">Ir para meu Instagram</a>
               </div>
             </article>
        <article class="c-card c-card--linkedin js-card">
@@ -200,7 +200,7 @@
               <link rel="stylesheet" href="linkedin.com/in/israel-coimbra-de-pina-65b258231"/>
              
    
-              <a href="#" class="c-button">Ir para meu Linkedin</a>
+              <a href="https://www.linkedin.com/in/israel-coimbra-de-pina-65b258231/" class="c-button">Ir para meu Linkedin</a>
             </div>
           </article>
          <article class="c-card c-card--twitter js-card">
@@ -209,7 +209,7 @@
              É meu  <span class="c-card__title-emphasis">Email</span>
             </h1>
    
-           <p class="c-card__explanation">Email Profissional para Contato: israelcoimbra4142@gmail.com</p>
+           <p class="c-card__explanation">Email Profissional para Contato: israelcoimbra4142@gmail.com ou israelpina047@gmail.com</p>
    
            <a href="#" class="c-button">Ir para meu Email</a>
          </div>
