--- a/Index.html
+++ b/Index.html
@@ -196,7 +196,7 @@
                </span>
               </h1>
    
-              <p class="c-card__explanation">Linkedin:</p>
+              <p class="c-card__explanation">Linkedin: Israel Coimbra de Pina</p>
               <link rel="stylesheet" href="linkedin.com/in/israel-coimbra-de-pina-65b258231"/>
              
    
@@ -206,7 +206,7 @@
          <article class="c-card c-card--twitter js-card">
            <div class="c-card-content">
             <h1 class="c-card__title">
-             É meu  <span class="c-card__title-emphasis">Email</span>
+             Contado do meu  <span class="c-card__title-emphasis">Email</span>
             </h1>
    
            <p class="c-card__explanation">Email Profissional para Contato: israelcoimbra4142@gmail.com ou israelpina047@gmail.com</p>
